frontend/test/should_pass/enum_003.grg
using enum_model_003;

rule r {
	a:A -b:B-> a;

	modify {
		eval {
			a.e = b.e;
			b.i = (int)a.e;
			b.e = te::a;
		}
	}
}

